--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,3 +1,10 @@
+/* Google fonts improt */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');
+
 body {
-    background-color: red;
+    font-family: "Inter", sans-serif;
+}
+
+h1 {
+    font-family: "Macondo", cursive;
 }
