--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -27,3 +27,15 @@ h3 {
 .sub-heading0color {
     color: var(--highlight)
 }
+
+/* grid visual css for testing */
+
+.container,
+.row {
+    border: 2px solid black;
+}
+
+.col-12 {
+    border: 2px solid white;
+    background-color: lightgray;
+}
