--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -22,10 +22,16 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+    text-transform: uppercase;
 }
 
-.sub-heading0color {
+.sub-heading-color {
     color: var(--highlight)
+}
+
+.section {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 /* Navbar */
@@ -35,6 +41,11 @@ h3 {
 
 #navbar .logo {
     width: 30px;
+}
+
+/* Header */
+#header .lead {
+    font-family: var(--secondary-font);
 }
 
 /* grid visual css for testing */
