--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -22,7 +22,16 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+   
+}
+
+h1,
+h2 {
     text-transform: uppercase;
+}
+
+h2 {
+    margin-bottom: 2rem;
 }
 
 .sub-heading-color {
@@ -48,6 +57,17 @@ h3 {
     font-family: var(--secondary-font);
 }
 
+/* Services */
+
+#services .card-footer {
+    font-weight: bold;
+    color: var(--highlight);
+    background-color: transparent;
+}
+
+#services .card {
+    margin-bottom: 1.5rem;
+}
 /* grid visual css for testing */
 
 /* .container,
