--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -106,6 +106,10 @@ h2 {
 #contact .social-links i:hover {
     color: var(--secondary-color);
 }
+
+#contact .table-dark * {
+    background-color: transparent;
+}
 /* grid visual css for testing */
 
 /* .container,
