--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -7,7 +7,7 @@
     --secondary-font: "Macondo", cursive;
     --primary-color: #3a2620; /* dark brown  */
     --secondary-color: #aa9581; /* light brown */
-    --highlight: #416a8e; /* blue */
+    --highlight-color: #416a8e; /* blue */
     --highlight-color-light: #7a9fc2; /* light blue */
 }
 
@@ -41,6 +41,30 @@ h2 {
 .section {
     margin-top: 2rem;
     margin-bottom: 2rem;
+}
+
+/* Buttons */
+
+.custom-button-filled {
+    border: 2px solid var(--highlight-color);
+    background-color: var(--highlight-color);
+    color: white;
+}
+
+.custom-button-filled:hover {
+    border: 2px solid var(--secondary-color);
+    background-color: var(--secondary-color);
+    color: white;
+}
+.custom-button-outline {
+    border: 3px solid var(--highlight-color);
+    padding: 7px 25px;
+    color: var(--highlight-color)
+}
+
+.custom-button-outline:hover {
+    background-color: var(--highlight-color);
+    color: white
 }
 
 /* Navbar */
