--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -5,10 +5,14 @@
 :root {
     --primary-font: "Inter", sans-serif;
     --secondary-font: "Macondo", cursive;
-    --primary-color: #3a2620; /* dark brown  */
-    --secondary-color: #aa9581; /* light brown */
-    --highlight-color: #416a8e; /* blue */
-    --highlight-color-light: #7a9fc2; /* light blue */
+    --primary-color: #3a2620;
+    /* dark brown  */
+    --secondary-color: #aa9581;
+    /* light brown */
+    --highlight-color: #416a8e;
+    /* blue */
+    --highlight-color-light: #7a9fc2;
+    /* light blue */
 }
 
 /* Global styles */
@@ -22,7 +26,7 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
-   
+
 }
 
 h1,
@@ -56,6 +60,7 @@ h2 {
     background-color: var(--secondary-color);
     color: white;
 }
+
 .custom-button-outline {
     border: 3px solid var(--highlight-color);
     padding: 7px 25px;
@@ -100,6 +105,23 @@ h2 {
     border: none;
 }
 
+/* Events */
+.student-discount {
+    background-color: var(--highlight-color);
+    font-weight: bold;
+    color: white;
+    display: block;
+    max-width: 300px;
+    margin: auto;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+
+}
+
+#events .table-light * {
+    background: transparent;
+}
+
 /* footer / contact */
 
 #contact {
@@ -115,9 +137,10 @@ h2 {
 #contact .sub-heading-color {
     color: var(--highlight-color-light);
 }
+
 #contact i {
     color: var(--secondary-color);
-    font-size: 1,2rem;
+    font-size: 1, 2rem;
     margin-right: 15px;
 }
 
@@ -134,6 +157,7 @@ h2 {
 #contact .table-dark * {
     background-color: transparent;
 }
+
 /* grid visual css for testing */
 
 /* .container,
@@ -149,6 +173,7 @@ h2 {
 /* medium screens ( tablets, 768px and up */
 
 @media screen and (min-width: 768px) {
+
     /* makes all services cards the same height for consistency */
     #services .card-body {
         min-height: 191px;
@@ -157,6 +182,7 @@ h2 {
 
 /* large screens ( tablets, 992px and up */
 @media screen and (min-width: 992px) {
+
     /* makes all services cards the same height for consistency */
     #services .card-body {
         min-height: auto;
@@ -165,6 +191,7 @@ h2 {
 
 /* Extra large screens ( tablets, 1200px and up */
 @media screen and (min-width: 1200px) {
+
     /* makes all services cards the same height for consistency */
     #services .card-body {
         min-height: 220px;
@@ -173,6 +200,7 @@ h2 {
 
 /* XXL screens ( tablets, 1400px and up */
 @media screen and (min-width: 1400px) {
+
     /* makes all services cards the same height for consistency */
     #services .card-body {
         min-height: 195px;
