--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -140,13 +140,15 @@ h2 {
 
 #contact i {
     color: var(--secondary-color);
-    font-size: 1, 2rem;
+    font-size: 1.2rem;
     margin-right: 15px;
 }
 
 #contact .social-links i {
     color: var(--highlight-color-light);
     font-size: 1.9rem;
+    -webkit-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
 }
 
@@ -157,18 +159,6 @@ h2 {
 #contact .table-dark * {
     background-color: transparent;
 }
-
-/* grid visual css for testing */
-
-/* .container,
-.row {
-    border: 2px solid black;
-}
-
-.col-12 {
-    border: 2px solid white;
-    background-color: lightgray;
-} */
 
 /* medium screens ( tablets, 768px and up */
 
